[package]
name = "game_randomizer"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "^1"
clap = "^2.3"
serenity = "^0.10"
tokio = { version = "1.0", features = ["macros", "signal", "rt-multi-thread"] }
futures = "^0.3"
rsteam = "^0.1"
toml = "^0.4"
serde = { version = "1.0", features = ["derive"] }
